<?xml version="1.0"?>
<package format="2">
  <name>mqtt_bridge</name>
  <version>0.1.6</version>
  <description>The mqtt_bridge package</description>

  <author email="junya.hayashi@groove-x.com">Junya Hayashi</author>
  <maintainer email="junya.hayashi@groove-x.com">Junya Hayashi</maintainer>

  <license>MIT</license>

  <url>http://www.ros.org/wiki/mqtt_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosbridge_library</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>python-inject-pip</exec_depend> -->
  <!-- <exec_depend>python-msgpack</exec_depend> -->
  <!-- <exec_depend>python-paho-mqtt-pip</exec_depend> -->

  <export>
  </export>
</package>
